<resources>
    <string name="app_name">Voice Controller</string>
    <string name="weight_prompt">Select Weight Unit:</string>
    <string name="height_prompt">Select Height Unit:</string>
    <string name="weight_hint">Enter Weight</string>
    <string name="height_hint">Enter Height</string>
    <string name="calculate">Calculate BMI</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="enter_minutes">Enter Minutes</string>
    <string name="select_sound_prompt">Select Notification Sound</string>
    <string name="tv_text_title_ShakeThreshold">Shake Threshold</string>
    <string name="button_text_Save">Save</string>
    <string name="button_text_Settings">Settings</string>
    <string name="tv_text_heading_Settings">Settings</string>
    <string name="tv_text_explaination_st">How hard to shake to switch flashlight on?</string>
    <string name="iv_contentDisc">Gif Image to show shake motion</string>
    <string name="switch_on_text">Switch On</string>
    <string name="switch_off_text">Switch Off</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
</resources>