<!-- activity_main.xml -->

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/btn_gradient"
    tools:context=".BMI">
    <include layout="@layout/header_layout" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/app_name"
        android:onClick="onNextButtonClick"
        android:src="@android:drawable/ic_menu_revert"
      />

    <Spinner
        android:id="@+id/spinnerWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/weight_units"
        android:minHeight="48dp"
        android:prompt="@string/weight_prompt"
        style="@style/SpinnerStyle"/>

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints=""
        style="@style/EditTextStyle"/>

    <Spinner
        android:id="@+id/spinnerHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/height_units"
        android:minHeight="48dp"
        android:prompt="@string/height_prompt"
        style="@style/SpinnerStyle"/>

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints=""

        style="@style/EditTextStyle"/>
    <Button
        android:id="@+id/btnCalculate"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        tools:ignore="VisualLintButtonSize" />
    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="369dp"
        android:layout_height="124dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/calculate"
        android:text=" "
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bmi" />


</LinearLayout>
