<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/pexels_anete_lusina_5240548"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:textColorHint="#FFFFFF"
        android:inputType="numberDecimal"
        android:backgroundTint="#2196F3"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:elevation="4dp"
        android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/sourceCurrencySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amountEditText"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:minHeight="48dp"
        android:padding="12dp" />

    <Spinner
        android:id="@+id/targetCurrencySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sourceCurrencySpinner"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:minHeight="48dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/targetCurrencySpinner"
        android:layout_marginTop="16dp"
        android:text="@string/convert"
        android:textColor="#FFFFFF"
        android:backgroundTint="#2196F3"
        android:padding="16dp"
        android:elevation="8dp"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="375dp"
        android:layout_height="142dp"
        android:layout_below="@id/convertButton"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>
